<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProfileActivity">
    <ImageView
        android:id="@+id/my_profile_pic"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_track"
            android:layout_marginStart="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_nigeria"
            android:layout_marginStart="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:layout_marginStart="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_no"
            android:layout_marginStart="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slack"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slack_username"
            android:layout_marginStart="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    </LinearLayout>

</LinearLayout>